[package]
name = "quicat"
about = "Simple socat like utility over quic protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
s2n-quic = "1.34.0"
tokio = { version = "1", features = ["full"] }
aws-lc-sys = { version="0.13", features = ["bindgen"] }
libc = "0.2.153"

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"

[lib]
crate-type = ["cdylib"]
bench = false
